# Metacritic-Analysis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEV.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  template.env
app/: analysis.py  queries.py
dags/: pipeline_dag.py
src/: entrypoint.py
src/core/: agents.py  contracts.py  requester.py  settings.py
src/core/tools/: mongodb.py  s3.py
src/pipeline/extraction/: spider.py
src/pipeline/extraction/parsers/: games_parser.py  movies_parser.py  utils.py
src/pipeline/transformation/: data_cleansing.py
