[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gustavo-B-Morales-S <protected_gustavo_borges@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
httpx = "^0.27.2"
aiofiles = "^24.1.0"
ua-parser = "^0.18.0"
pydantic-settings = "^2.5.2"
loguru = "^0.7.2"
fsspec = "^2024.9.0"
awswrangler = "^3.9.1"
duckdb = "^1.1.1"
boto3 = "^1.35.33"
pyarrow = "^17.0.0"
streamlit = "^1.39.0"
selectolax = "^0.3.21"
matplotlib = "^3.9.2"
trio = "^0.27.0"
pymongo = "^4.10.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
mypy = "^1.11.1"
bandit = "^1.7.9"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
pre-commit = "^3.8.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 85

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check . ; ruff format . --diff'
format = 'ruff check . --fix ; ruff format .'
del_cache = 'find . | grep -E "(/__pycache__$|\.pyc$|\.pyo$|.mypy|.ruff)" | xargs rm -rf'
