# ------------------------ Poetry/Dependencies Settings ------------------------ #

[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gustavo-B-Morales-S <protected_gustavo_borges@outlook.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },  
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.2"
httpx = "^0.27.2"
aiofiles = "^24.1.0"
ua-parser = "^0.18.0"
pydantic-settings = "^2.5.2"
loguru = "^0.7.2"
fsspec = "^2024.9.0"
awswrangler = "^3.9.1"
duckdb = "^1.1.1"
boto3 = "^1.35.33"
pyarrow = "^17.0.0"
selectolax = "^0.3.21"
matplotlib = "^3.9.2"
trio = "^0.27.0"
pymongo = "^4.10.1"
tenacity = "^9.0.0"
streamlit = "^1.44.0"
altair = "^5.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
mypy = "^1.11.1"
bandit = "^1.7.9"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ------------------------ Ruff Settings ------------------------ #

[tool.ruff]
line-length = 84

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

# ------------------------ Taskipy Tasks  ------------------------ #

[tool.taskipy.tasks]
# ---------- Test-related tasks ---------- #
test = "pytest --cov metacritic-analysis -vv"
# ^ Runs pytest with:
#   --cov: Enable coverage reporting for 'metacritic-analysis' package
#   -vv: Extra verbose output (shows individual test names)

cov = "xdg-open $(coverage html | cut -d ' ' -f 5)"
# ^ Generates and opens HTML coverage report:
#   1. coverage html: Creates HTML coverage report in htmlcov/
#   2. cut -d ' ' -f 5: Extracts the report path from coverage's output
#   3. xdg-open: Opens the report in default browser (Linux/macOS)

# ---------- Execution tasks ---------- #
run = "poetry run python3 src/pipeline/extraction/spider.py"
# ^ Runs the main spider script using:
#   poetry run: Ensures proper virtual environment context
#   python3: Explicit Python 3 interpreter

post_run = "task del_cache"
# ^ Cleanup task that runs after main execution
# Calls the del_cache task defined below

# ---------- Code quality tasks ---------- #
lint = "ruff check . ; ruff format . --diff"
# ^ Runs two checks:
#   1. ruff check .: Static code analysis (linter)
#   2. ruff format . --diff: Shows formatting changes without applying them

format = "ruff check . --fix ; ruff format ."
# ^ Auto-formats code:
#   1. ruff check . --fix: Fixes linting errors that can be auto-fixed
#   2. ruff format .: Appoys code formatting

# ---------- Utility tasks ---------- #
del_cache = 'find . | grep -E "(htmlcov$|.coverage$|pytest_cache$|/__pycache__$|\.pyc$|\.pyo$|.mypy|.ruff)" | xargs rm -rf'
# ^ Cleans up development cache files by:
#   1. find .: Searches current directory recursively
#   2. grep -E: Uses regex to match cache file patterns:
#      - htmlcov$: Coverage report directory
#      - .coverage$: Coverage data file
#      - pytest_cache$: Pytest cache
#      - /__pycache__$: Python bytecode cache directories
#      - \.pyc$|\.pyo$: Compiled Python files
#      - .mypy|.ruff: Type checker and linter caches
#   3. xargs rm -rf: Force deletes matched files/dirs
